# catpic

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: test-all.yml
benchmarks/: README.md
c/: Makefile  README.md  test-config.toml
python/: README.md  pyproject.toml
python/Reference/Development/: analysis_report.md  strategy.md
python/Reference/Implementation/: reference_encoder.py
python/Reference/Setup/: setup_commands.md
python/Reference/Specification/: format_spec.md
python/src/catpic/: __init__.py  cli.py  core.py  decoder.py  encoder.py  primitives_module.py
python/tests/: test_core.py
scripts/: README.md  test-all.sh
spec/: compliance.md  protocol.md
